# suspension_designer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  render_test.py  requirements.txt
examples/: basic_suspension.proj
src/: docks.py  document.py  graphics.py  main.py  math.py  model_variables.py  motion.py  properties.py  rendering.py  scene.py  solver.py  structures.py  tree_model.py
src/suspension_designer/: data_manager.py  docks.py  document.py  graphics.py  model_variables.py  motion.py  properties.py  rendering.py  result_viewer.py  results.py  results_compiler.py  scene.py  selection.py  settings.py  solver.py  structures.py  tree_model.py
src/suspension_designer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: solver_convergence_test.py
