[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suspension_designer"       # This is the name you will use to import your code
version = "0.1.0"
dependencies = [
    # Add any external packages you need here, for example:
    # "requests>=2.31.0",
    altgraph==0.17.5
    certifi==2026.6.17
    charset-normalizer==3.4.7
    contourpy==1.3.3
    cycler==0.12.1
    docopt==0.6.2
    fonttools==4.63.0
    idna==3.18
    kiwisolver==1.5.0
    llvmlite==0.47.0
    matplotlib==3.11.0
    numba==0.65.1
    numpy==2.4.6
    packaging==26.2
    pefile==2024.8.26
    pillow==12.3.0
    pipreqs==0.4.13
    pyinstaller==6.21.0
    pyinstaller-hooks-contrib==2026.6
    PyOpenGL==3.1.10
    pyparsing==3.3.2
    PySide6==6.11.1
    PySide6_Addons==6.11.1
    PySide6_Essentials==6.11.1
    python-dateutil==2.9.0.post0
    pywin32-ctypes==0.2.3
    requests==2.34.2
    scipy==1.18.0
    setuptools==82.0.1
    shiboken6==6.11.1
    six==1.17.0
    urllib3==2.7.0
    yarg==0.1.10
]

[tool.setuptools.packages.find]
where = ["src"]            # Tells setuptools to look inside the "src" folder for your code